# social-content-creator

./: .env.example  .gitignore  CLAUDE.md  README.md  WORDPRESS_ARCHITECTURE.md  WORDPRESS_CODE_TEMPLATES.md  WORDPRESS_EXTRACTION_SUMMARY.md  WORDPRESS_QUICK_REFERENCE.md  WORDPRESS_SESSION_EXTRACTION.md  pyproject.toml
.claude/commands/: review-docs.md
.claude/skills/create-blog-post/: SKILL.md
.claude/skills/publish-to-wordpress/: SKILL.md
.claude/skills/publish-to-x/: SKILL.md
docs/core/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md  wordpress-theme-research-2026.md
docs/drafts/weekly-ai-news/: 20260214-202622ai-anthropic-3003ai.md
docs/ideas/: 20260213-social-content-creator.md
src/: errors.py
src/collectors/: base.py  gemini.py  github.py  notion_medium.py  notion_news.py  notion_paper.py  url_fetcher.py  web_search.py
src/generators/: blog_post.py
src/models/: blog_post.py  template.py
src/publishers/: base.py  wordpress.py  x.py
src/templates/: __init__.py  cv.py  feature.py  market_analysis.py  ml_practice.py  paper_review.py  project_intro.py  tool_tips.py  weekly_ai_news.py
src/utils/: markdown.py
tests/: conftest.py
tests/integration/: test_generate_and_save.py
tests/unit/collectors/: test_gemini.py  test_github.py  test_notion_medium.py  test_notion_news.py  test_notion_paper.py  test_url_fetcher.py  test_web_search.py
tests/unit/generators/: test_blog_post.py
tests/unit/models/: test_blog_post.py  test_template.py
(+4 files in other folders)
